sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:8: error: not found: value echangeFait1
    echangeFait1 = false
    ^AlgCocktailSort3:9: error: not found: value echangeFait2
    echangeFait2 = false
    ^AlgCocktailSort3:16: error: not found: value echangeFait1
    if (!echangeFait1)
         ^AlgCocktailSort3:25: error: not found: value echangeFait2
    if (!echangeFait2)
         ^