sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  val lgr = getNombreValeurs()
  var debut = 0
  var fin = lgr - 2
  var echangeFait : Boolean = false
  do {
    echangeFait1 = false
    echangeFait2 = false
    for (i <- debut to fin) {
      if (!plusPetit(i,i+1)) {
        echange(i,i+1)
        echangeFait = true
      }
    }
    if (!echangeFait1)
    	return
    fin -= 1
    for (i <- fin to debut by -1) {
      if (!plusPetit(i,i+1)) {
        echange(i,i+1)
        echangeFait = true
      }
    }
    if (!echangeFait2)
    	return
    debut += 1
  } while (true)
}